# etcd-rs

./: Cargo.toml  Makefile  README.md  build.rs
.github/workflows/: CI.yml
examples/: README.md  auth.rs  kv.rs  kv_reauth.rs  tls.rs  watch.rs
hack/: download_etcd.sh  generate_etcd_cluster.sh
src/: client.rs
src/auth/: auth_disable.rs  auth_enable.rs  auth_status.rs  authenticate.rs  role_add.rs  role_delete.rs  role_list.rs
src/cluster/: mod.rs
src/kv/: compact.rs  delete.rs  mod.rs  put.rs  range.rs  txn.rs
src/lease/: grant.rs  keep_alive.rs  revoke.rs
