[package]
name = "ya-etcd-rs"
version = "1.2.3"
authors = [
    "lodrem <jialun.cai@pm.me>",
    "fikers <fikersfan@gmail.com>",
    "diablur <diablur@gmail.com>",
]
edition = "2021"
keywords = ["etcd", "future", "async"]
repository = "https://github.com/fikersd/etcd-rs"
homepage = "https://github.com/fikersd/etcd-rs"
description = "etcd client for rust"
license = "MIT"
exclude = ["hack/", "examples/", "Makefile", "justfile"]

[lints.rust]
dead_code = "allow"

[lints.clippy]
module_inception = "allow"

[[example]]
name = "kv"
path = "examples/kv.rs"

[[example]]
name = "tls"
path = "examples/tls.rs"
required-features = ["tls"]

[[example]]
name = "watch"
path = "examples/watch.rs"

[features]
default = ["tls"]
tls = ["tonic/tls-ring", "tokio/fs"]

[dependencies]
tonic = "0.13"
prost = "0.13"
tokio = "1.44"
tokio-stream = "0.1"
futures = "0.3"
thiserror = "2.0"
http = "1.3"

[dev-dependencies]
tokio = { version = "1.44", features = ["macros", "rt-multi-thread"] }

[build-dependencies]
tonic-build = "0.13"
