[package]
name = "ya-etcd-rs"
version = "1.3.2"
authors = [
    "lodrem <jialun.cai@pm.me>",
    "fikers <fikersfan@gmail.com>",
    "diablur <diablur@gmail.com>",
]
edition = "2024"
keywords = ["etcd", "future", "async"]
repository = "https://github.com/fikersd/etcd-rs"
homepage = "https://github.com/fikersd/etcd-rs"
description = "etcd client for rust"
license = "MIT"
exclude = ["hack/", "examples/", "Makefile", "justfile"]

[lints.rust]
dead_code = "allow"

[lints.clippy]
module_inception = "allow"

[[example]]
name = "kv"
path = "examples/kv.rs"

[[example]]
name = "tls"
path = "examples/tls.rs"
required-features = ["tls"]

[[example]]
name = "watch"
path = "examples/watch.rs"

[features]
default = ["tls"]
tls = ["tonic/tls-ring", "tokio/fs"]

[dependencies]
futures = "0.3"
http = "1.4"
prost = "0.14"
thiserror = "2.0"
tokio = "1.49"
tokio-stream = "0.1"
tonic = "0.14"
tonic-prost = "0.14"

[dev-dependencies]
tokio = { version = "1.49", features = ["macros", "rt-multi-thread"] }

[build-dependencies]
tonic-prost-build = "0.14"
